# django-schematic

./: .env.deploy.example  .gitignore  LICENSE  Makefile  README.md  README.quick_development_workflow.md  README.setting-up-CI.md  hatch_build.py  pyproject.toml
.github/workflows/: release.yml  tests.yml  ui-tests.yml
schematic/: apps.py  png_utils.py  schema.py  settings.py  urls.py  views.py
schematic/management/commands/: update_diagrams.py
schematic/static/schematic/: main.css  main.js
schematic/templates/schematic/: index.html
tests/: settings.py  test_png_utils.py  test_schema.py  test_update_diagrams_detection.py  test_update_diagrams_settings.py  test_views.py  urls.py
tests/testapp/: apps.py  models.py
ui/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx
ui/src/components/: AutomationBridge.tsx  EdgeTypes.tsx  FileMenu.tsx  HelpDialog.tsx  ModelNode.tsx  SchemaCanvas.tsx  SettingsDrawer.tsx  SettingsHandle.tsx  Sidebar.tsx  SidebarDrawer.tsx  SliderInput.tsx  Toolbar.tsx
ui/src/hooks/: useElkLayout.ts  useForceLayout.ts  useLayout.ts  useSchema.ts
ui/src/lib/: colors.ts  config.ts  floatingEdge.ts  markers.tsx  pngEmbed.ts  types.ts
ui/src/store/: physicsStore.ts  schemaStore.ts
