[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-schematic"
version = "0.3.1"
description = "Interactive schema visualization for Django projects — React Flow + force-directed layout"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "django>=5.1",
]
keywords = ["django", "schema", "visualization", "graph", "models"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django",
    "mypy",
    "django-stubs",
]

[project.urls]
Homepage = "https://github.com/jsheffie/django-schematic"
Repository = "https://github.com/jsheffie/django-schematic"
Issues = "https://github.com/jsheffie/django-schematic/issues"

[tool.hatch.build.targets.wheel]
packages = ["schematic"]

[tool.hatch.build.targets.sdist]
include = [
    "schematic/",
    "LICENSE",
    "README.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = ["."]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "tests.settings"
